# word-wrap-ja

./: LICENSE  README.md  pyproject.toml  test_wrap.py  wrap.py
tests/: __init__.py
