[project]
name = "word-wrap-ja"
version = "0.1.0"
description = "A tool for wrapping Japanese text based on visual width"
authors = [
    { name = "Hiroki Okada", email = "hirokiokada77@gmail.com" }
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "janome>=0.5.0",
    "wcwidth>=0.2.13",
]

[project.scripts]
word-wrap-ja = "wrap:main"

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.uv]
package = true
