[project]
name = "word_wrap_ja"
version = "0.1.0"
description = "A tool for wrapping Japanese text based on visual width"
readme = "README.md"
authors = [
    { name = "Hiroki Okada", email = "hirokiokada77@gmail.com" }
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "janome>=0.5.0",
    "wcwidth>=0.2.13",
]

[project.scripts]
word-wrap-ja = "word_wrap_ja:main"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
